--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <!-- Promo Code -->
                             <div class="row border-top pt-3 mb-3 ">
                                 <div class="col-md-12">
-                                    <p>Add Promo Code</p>
+                                    <p>Add Promo Code ( Hints-> code: stevekaku )</p>
                                     <div class="d-flex">
                                         <input id="promo-input" class="form-control " type="text" >
                                         <button id="promo-button" type="button" class="btn btn-danger">Apply</button>
